--- a/woofai-presale/package.json
+++ b/woofai-presale/package.json
@@ -16,6 +16,7 @@
     "@solana/web3.js": "^1.98.2",
     "@wallet-standard/react": "^1.0.1",
     "chart.js": "^4.4.9",
+    "firebase": "^11.9.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-error-boundary": "^6.0.0"
